--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<module>org.eclipse.xtext.activities</module>
 		<module>org.eclipse.xtext.builder</module>
 		<module>org.eclipse.xtext.ui</module>
+		<module>org.eclipse.xtext.common.types.tests</module>
 		<module>org.eclipse.xtext.common.types.ui</module>
 		<module>org.eclipse.xtext.common.types.edit</module>
 		<module>org.eclipse.xtext.common.types.shared</module>
