--- a/releng/org.eclipse.xtext.tycho.tests.parent/pom.xml
+++ b/releng/org.eclipse.xtext.tycho.tests.parent/pom.xml
@@ -90,6 +90,11 @@
 								<id>org.eclipse.pde.api.tools.ee.feature</id>
 								<versionRange>1.0.0</versionRange>
 							</requirement>
+							<requirement>
+								<type>eclipse-feature</type>
+								<id>org.eclipse.jdt</id>
+								<versionRange>0.0.0</versionRange>
+							</requirement>
 						</extraRequirements>
 					</dependency-resolution>
 				</configuration>
@@ -104,7 +109,7 @@
 					<configuration>
 						<!-- <forkedProcessTimeoutInSeconds>1200</forkedProcessTimeoutInSeconds> -->
 						<useUIHarness>true</useUIHarness>
-						<useUIThread>false</useUIThread>
+						<useUIThread>true</useUIThread>
 						<argLine>${memory-settings} ${os-jvm-flags}</argLine>
 					</configuration>
 				</plugin>
