create new parent poms for features and plugins; exclude source-features
The commit introduces new parent poms for plugins and features to ensure
the tycho plugin-source and feature-source plugins are only executed on 
modules of that nature

Signed-off-by: Moritz Eysholdt <moritz.eysholdt@typefox.io>

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
 	<modules>
 		<module>releng/org.eclipse.xtext.target</module>
 		<module>releng/org.eclipse.xtext.tycho.parent</module>
+		<module>releng/org.eclipse.xtext.tycho.plugin.parent</module>
+		<module>releng/org.eclipse.xtext.tycho.feature.parent</module>
 		<module>releng/org.eclipse.xtext.tycho.tests.parent</module>
 		<module>releng/org.eclipse.xtext.p2-repository</module>
 
