--- a/releng/org.eclipse.xtext.tycho.plugin.parent/pom.xml
+++ b/releng/org.eclipse.xtext.tycho.plugin.parent/pom.xml
@@ -1,17 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.eclipse.xtext</groupId>
-		<artifactId>org.eclipse.xtext.tycho.feature.parent</artifactId>
+		<artifactId>org.eclipse.xtext.tycho.parent</artifactId>
 		<version>2.11.0-SNAPSHOT</version>
-		<relativePath>../org.eclipse.xtext.tycho.feature.parent</relativePath>
+		<relativePath>../org.eclipse.xtext.tycho.parent</relativePath>
 	</parent>
-	<packaging>eclipse-feature</packaging>
-	<groupId>org.eclipse.xtext.feature</groupId> <!-- TODO: hack! -->
-	<artifactId>org.eclipse.xtext.runtime</artifactId>
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>org.eclipse.xtext.tycho.plugin.parent</artifactId>
+	<packaging>pom</packaging>
 
-	<!-- <build>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
@@ -19,11 +18,13 @@
 				<version>${tycho-version}</version>
 				<executions>
 					<execution>
-						<phase>pre-integration-test</phase>
+						<id>plugin-source</id>
+						<goals>
+							<goal>plugin-source</goal>
+						</goals>
 					</execution>
 				</executions>
-
 			</plugin>
 		</plugins>
-	</build> -->
+	</build>
 </project>
