--- a/org.eclipse.xtext.common.types.shared/pom.xml
+++ b/org.eclipse.xtext.common.types.shared/pom.xml
@@ -3,9 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.eclipse.xtext</groupId>
-		<artifactId>org.eclipse.xtext.tycho.parent</artifactId>
+		<artifactId>org.eclipse.xtext.tycho.plugin.parent</artifactId>
 		<version>2.11.0-SNAPSHOT</version>
-		<relativePath>../releng/org.eclipse.xtext.tycho.parent</relativePath>
+		<relativePath>../releng/org.eclipse.xtext.tycho.plugin.parent</relativePath>
 	</parent>
 	<packaging>eclipse-plugin</packaging>
 	<artifactId>org.eclipse.xtext.common.types.shared</artifactId>
