--- a/releng/org.eclipse.xtext.license.feature/pom.xml
+++ b/releng/org.eclipse.xtext.license.feature/pom.xml
@@ -3,9 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.eclipse.xtext</groupId>
-		<artifactId>org.eclipse.xtext.tycho.parent</artifactId>
+		<artifactId>org.eclipse.xtext.tycho.feature.parent</artifactId>
 		<version>2.11.0-SNAPSHOT</version>
-		<relativePath>../org.eclipse.xtext.tycho.parent</relativePath>
+		<relativePath>../org.eclipse.xtext.tycho.feature.parent</relativePath>
 	</parent>
 	<packaging>eclipse-feature</packaging>
 	<artifactId>org.eclipse.xtext.license</artifactId>
