--- a/releng/org.eclipse.xtext.tycho.feature.parent/pom.xml
+++ b/releng/org.eclipse.xtext.tycho.feature.parent/pom.xml
@@ -1,16 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.eclipse.xtext</groupId>
-		<artifactId>org.eclipse.xtext.tycho.feature.parent</artifactId>
+		<artifactId>org.eclipse.xtext.tycho.parent</artifactId>
 		<version>2.11.0-SNAPSHOT</version>
-		<relativePath>../org.eclipse.xtext.tycho.feature.parent</relativePath>
+		<relativePath>../org.eclipse.xtext.tycho.parent</relativePath>
 	</parent>
-	<packaging>eclipse-feature</packaging>
-	<groupId>org.eclipse.xtext.feature</groupId> <!-- TODO: hack! -->
-	<artifactId>org.eclipse.xtext.ui</artifactId>
-	
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>org.eclipse.xtext.tycho.feature.parent</artifactId>
+	<packaging>pom</packaging>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -31,7 +30,6 @@
 								<plugin id="org.apache.commons.lang" />
 								<plugin id="org.eclipse.xtext.doc" />
 								<feature id="org.eclipse.xtext.docs" />
-								<feature id="org.eclipse.xtext.runtime" />
 							</excludes>
 						</configuration>
 					</execution>
