--- a/releng/org.eclipse.xtext.tycho.parent/pom.xml
+++ b/releng/org.eclipse.xtext.tycho.parent/pom.xml
@@ -70,7 +70,7 @@
 		<dependency>
 			<groupId>io.typefox.lsapi</groupId>
 			<artifactId>io.typefox.lsapi.services</artifactId>
-			<version>0.3.0</version>
+			<version>0.4.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.xtend</groupId>
