--- a/releng/org.eclipse.xtext.tycho.parent/pom.xml
+++ b/releng/org.eclipse.xtext.tycho.parent/pom.xml
@@ -69,11 +69,11 @@
 	<distributionManagement>
 		<repository>
 			<id>local.release.repo</id>
-			<url>file:${basedir}/../../build/maven-repository</url>
+			<url>file:${user.dir}/build/maven-repository</url>
 		</repository>
 		<snapshotRepository>
 			<id>local.release.repo</id>
-			<url>file:${basedir}/../../build/maven-repository</url>
+			<url>file:${user.dir}/build/maven-repository</url>
 		</snapshotRepository>
 	</distributionManagement>
 
