--- a/org.eclipse.xtext.ui.tests.changeserializer/build.properties
+++ b/org.eclipse.xtext.ui.tests.changeserializer/build.properties
@@ -1,6 +1,7 @@
 source.. = src/,\
            src-gen/,\
-           xtend-gen/
+           xtend-gen/,\
+           src-test/
 bin.includes = model/generated/,\
                .,\
                META-INF/,\
