--- a/org.eclipse.xtext.ui.tests.changeserializer/plugin.xml
+++ b/org.eclipse.xtext.ui.tests.changeserializer/plugin.xml
@@ -413,7 +413,13 @@
 			type="text">
 		</fileTypes>
 	</extension>
-	  <extension
+   <extension
+         point="org.eclipse.xtext.ui.resourceMoveStrategy">
+      <strategy
+            class="org.eclipse.xtext.ui.tests.changeserializer.ui.ChangeSerializerExecutableExtensionFactory:org.eclipse.xtext.ui.tests.changeserializer.ui.refactoring.ChangeSerializerMoveResourceStrategy">
+      </strategy>
+   </extension>
+   <extension
        point="org.eclipse.ltk.core.refactoring.moveParticipants">
     <moveParticipant
           class="org.eclipse.xtext.ui.tests.changeserializer.ui.ChangeSerializerExecutableExtensionFactory:org.eclipse.xtext.ui.refactoring.participant.XtextMoveResourceParticipant"
@@ -421,12 +427,6 @@
           name="Xtext Move Resource Participant">
        <enablement></enablement>
     </moveParticipant>
-  </extension>
-   <extension
-         point="org.eclipse.xtext.ui.moveParticipantStrategy">
-      <participant
-            class="org.eclipse.xtext.ui.tests.changeserializer.ui.refactoring.ChangeSerializerMoveResourceStrategy">
-      </participant>
    </extension>
    <extension
          point="org.eclipse.ltk.core.refactoring.renameParticipants">
