--- a/org.eclipse.xtext.testlanguages.ui/plugin.xml
+++ b/org.eclipse.xtext.testlanguages.ui/plugin.xml
@@ -867,6 +867,54 @@
 		<super type="org.eclipse.xtext.ui.check.expensive"/>
 		<persistent value="true"/>
 	</extension>
+	<extension point="org.eclipse.xtext.builder.participant">
+		<participant
+			class="org.eclipse.xtext.testlanguages.fileAware.ui.FileAwareTestLanguageExecutableExtensionFactory:org.eclipse.xtext.builder.IXtextBuilderParticipant"
+			fileExtensions="fileawaretestlanguage"/>
+	</extension>
+	<extension point="org.eclipse.ui.preferencePages">
+		<page
+			category="org.eclipse.xtext.testlanguages.fileAware.FileAwareTestLanguage"
+			class="org.eclipse.xtext.testlanguages.fileAware.ui.FileAwareTestLanguageExecutableExtensionFactory:org.eclipse.xtext.builder.preferences.BuilderPreferencePage"
+			id="org.eclipse.xtext.testlanguages.fileAware.FileAwareTestLanguage.compiler.preferencePage"
+			name="Compiler">
+			<keywordReference id="org.eclipse.xtext.testlanguages.fileAware.ui.keyword_FileAwareTestLanguage"/>
+		</page>
+	</extension>
+	<extension point="org.eclipse.ui.propertyPages">
+		<page
+			category="org.eclipse.xtext.testlanguages.fileAware.FileAwareTestLanguage"
+			class="org.eclipse.xtext.testlanguages.fileAware.ui.FileAwareTestLanguageExecutableExtensionFactory:org.eclipse.xtext.builder.preferences.BuilderPreferencePage"
+			id="org.eclipse.xtext.testlanguages.fileAware.FileAwareTestLanguage.compiler.propertyPage"
+			name="Compiler">
+			<keywordReference id="org.eclipse.xtext.testlanguages.fileAware.ui.keyword_FileAwareTestLanguage"/>
+			<enabledWhen>
+				<adapt type="org.eclipse.core.resources.IProject"/>
+			</enabledWhen>
+			<filter name="projectNature" value="org.eclipse.xtext.ui.shared.xtextNature"/>
+		</page>
+	</extension>
+	<extension point="org.eclipse.ui.menus">
+		<menuContribution locationURI="popup:#TextEditorContext?after=xtext.ui.openDeclaration">
+			<command
+				commandId="org.eclipse.xtext.ui.OpenGeneratedFileCommand"
+				id="org.eclipse.xtext.testlanguages.fileAware.FileAwareTestLanguage.OpenGeneratedCode"
+				style="push">
+				<visibleWhen checkEnabled="false">
+					<reference definitionId="org.eclipse.xtext.testlanguages.fileAware.FileAwareTestLanguage.Editor.opened" />
+				</visibleWhen>
+			</command>
+		</menuContribution>
+	</extension>
+	<extension point="org.eclipse.ui.handlers">
+		<handler
+			class="org.eclipse.xtext.testlanguages.fileAware.ui.FileAwareTestLanguageExecutableExtensionFactory:org.eclipse.xtext.ui.generator.trace.OpenGeneratedFileHandler"
+			commandId="org.eclipse.xtext.ui.OpenGeneratedFileCommand">
+			<activeWhen>
+				<reference definitionId="org.eclipse.xtext.testlanguages.fileAware.FileAwareTestLanguage.Editor.opened" />
+			</activeWhen>
+		</handler>
+	</extension>
 	<!-- Quick Outline -->
 	<extension
 		point="org.eclipse.ui.handlers">
@@ -2086,6 +2134,64 @@
 				value="true">
 			</attribute>
 		</markerResolutionGenerator>
+	</extension>
+	<!-- Rename Refactoring -->
+	<extension point="org.eclipse.ui.handlers">
+		<handler 
+			class="org.eclipse.xtext.testlanguages.fileAware.ui.FileAwareTestLanguageExecutableExtensionFactory:org.eclipse.xtext.ui.refactoring.ui.DefaultRenameElementHandler"
+			commandId="org.eclipse.xtext.ui.refactoring.RenameElement">
+			<activeWhen>
+				<reference
+					definitionId="org.eclipse.xtext.testlanguages.fileAware.FileAwareTestLanguage.Editor.opened">
+				</reference>
+			</activeWhen>
+		</handler>
+	</extension>
+	<extension point="org.eclipse.ui.menus">
+		<menuContribution
+			locationURI="popup:#TextEditorContext?after=group.edit">
+			<command commandId="org.eclipse.xtext.ui.refactoring.RenameElement"
+				style="push">
+				<visibleWhen checkEnabled="false">
+					<reference
+						definitionId="org.eclipse.xtext.testlanguages.fileAware.FileAwareTestLanguage.Editor.opened">
+					</reference>
+				</visibleWhen>
+			</command>
+		</menuContribution>
+	</extension>
+	<extension point="org.eclipse.ui.preferencePages">
+		<page
+			category="org.eclipse.xtext.testlanguages.fileAware.FileAwareTestLanguage"
+			class="org.eclipse.xtext.testlanguages.fileAware.ui.FileAwareTestLanguageExecutableExtensionFactory:org.eclipse.xtext.ui.refactoring.ui.RefactoringPreferencePage"
+			id="org.eclipse.xtext.testlanguages.fileAware.FileAwareTestLanguage.refactoring"
+			name="Refactoring">
+			<keywordReference id="org.eclipse.xtext.testlanguages.fileAware.ui.keyword_FileAwareTestLanguage"/>
+		</page>
+	</extension>
+	<extension point="org.eclipse.compare.contentViewers">
+		<viewer id="org.eclipse.xtext.testlanguages.fileAware.FileAwareTestLanguage.compare.contentViewers"
+			class="org.eclipse.xtext.testlanguages.fileAware.ui.FileAwareTestLanguageExecutableExtensionFactory:org.eclipse.xtext.ui.compare.InjectableViewerCreator"
+			extensions="fileawaretestlanguage">
+		</viewer>
+	</extension>
+	<extension point="org.eclipse.compare.contentMergeViewers">
+		<viewer id="org.eclipse.xtext.testlanguages.fileAware.FileAwareTestLanguage.compare.contentMergeViewers"
+			class="org.eclipse.xtext.testlanguages.fileAware.ui.FileAwareTestLanguageExecutableExtensionFactory:org.eclipse.xtext.ui.compare.InjectableViewerCreator"
+			extensions="fileawaretestlanguage" label="FileAwareTestLanguage Compare">
+		</viewer>
+	</extension>
+	<extension point="org.eclipse.ui.editors.documentProviders">
+		<provider id="org.eclipse.xtext.testlanguages.fileAware.FileAwareTestLanguage.editors.documentProviders"
+			class="org.eclipse.xtext.testlanguages.fileAware.ui.FileAwareTestLanguageExecutableExtensionFactory:org.eclipse.xtext.ui.editor.model.XtextDocumentProvider"
+			extensions="fileawaretestlanguage">
+		</provider>
+	</extension>
+	<extension point="org.eclipse.team.core.fileTypes">
+		<fileTypes
+			extension="fileawaretestlanguage"
+			type="text">
+		</fileTypes>
 	</extension>
 	<extension
          point="org.eclipse.xtext.ui.resourceRelocationStrategy">
